// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Page when given projects correctly renders 1`] = `
<div>
  <Component
    text={null}
  />
  <Component
    project="project"
  />
</div>
`;

exports[`Page when loading renders with loading information 1`] = `
<div>
  <Component />
  <Component
    text="Fetching project..."
  />
</div>
`;

exports[`Page with error renders with error bar 1`] = `
<div>
  <Component />
  <Component
    detail="an error"
    text="Could not load project"
  />
</div>
`;
